azure-cloudapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - demo.ghettolabs.io
    secretName: tls-secret
  rules:
  - host: demo.ghettolabs.io
    http:
      paths:
      - path: /
        backend:
          serviceName: aks-helloworld
          servicePort: 80
